implemented marshmallow and refactored methods
